The search now handles a more extensive check
There was an issue with events that have multiple different event days,
so those event days had to be looped through and checked so that they
were not overlooked falsely

--- a/tinker/events/templates/search_results.html
+++ b/tinker/events/templates/search_results.html
@@ -11,7 +11,7 @@
                     {% endif %}
                     <br/>
                     {% if form.is_published %}
-                        <p>{{ form['event-dates'] | safe }}</p>
+                        <p>{{ form['html'] | safe }}</p>
                         <a class="small-link" href={{ form.path }}>{{ form.path }}</a>
                     {% endif %}
                 </p>
