Changed 'Short URL' text look to pill

--- a/tinker/admin/redirects/templates/redirect-ajax.html
+++ b/tinker/admin/redirects/templates/redirect-ajax.html
@@ -4,7 +4,7 @@
         <td>
             <span class="from_path">{{ redirect.from_path }}</span>
             {% if redirect.short_url %}
-                <span class="label round">Short URL</span>
+                <span class="short_url label round">Short URL</span>
             {% endif %}
         </td>
         <td class="to_url">{{ redirect.to_url }}</td>
