--- a/tinker/admin/redirects/templates/redirects.html
+++ b/tinker/admin/redirects/templates/redirects.html
@@ -35,8 +35,10 @@
                                 </div>
                             </div>
                             <label class="checkbox" for="optionsCheckboxes">
-                                <span class="icons"><span class="first-icon fa fa-square-o"></span>
-                                    <span class="second-icon fa fa-check-square-o"></span></span>
+                                <span class="icons">
+                                    <span class="first-icon fa fa-square-o"></span>
+                                    <span class="second-icon fa fa-check-square-o"></span>
+                                </span>
                                 <input type="checkbox" name="optionsCheckboxes" id="optionsCheckboxes">
                                 Short URL
                             </label>
