--- a/tinker/templates/index.html
+++ b/tinker/templates/index.html
@@ -33,7 +33,7 @@
                     </div>
                 </div>
             </div>
-            {% if 'FACULTY' in session['roles'] or 'Tinker Faculty Bios' in session['groups'] or 'Administrators' in session['groups'] %}
+            {% if 'FACULTY' in session['roles'] or 'SPONSORED-FACULTY' in session['roles'] or 'Tinker Faculty Bios' in session['groups'] or 'Administrators' in session['groups'] %}
                 <div class="col-sm-6">
                     <div class="card">
                         <div class="header">
