--- a/tinker/static/assets/css/tinker.css
+++ b/tinker/static/assets/css/tinker.css
@@ -541,6 +541,10 @@ label {
     border-radius: 10px;
 }
 
+.table > thead > tr > th, .table > tbody > tr > th, .table > tfoot > tr > th, .table > thead > tr > td, .table > tbody > tr > td, .table > tfoot > tr > td {
+    vertical-align: unset !important;
+}
+
 /* Checkbox inputs */
 
 label.checkbox {
